--- a/Inicio.html
+++ b/Inicio.html
@@ -70,9 +70,9 @@
             <h1> <strong>PRODUTOS</strong></h1>
             <div class="row">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100" id="cartao"> 
                         <a href="pele.html">
-                            <img src="img/Pó card.png" class="card-img-top" alt="Produto 1">
+                            <img src="img/cards/Pó card.png" class="card-img-top" alt="Produto 1" >
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">PELE</h5>
@@ -82,9 +82,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100" id="cartao">
                         <a href="boca.html">
-                            <img src="img/Baton card.png" class="card-img-top" alt="Produto 2">
+                            <img src="img/cards/Baton card.png " class="card-img-top" alt="Produto 2">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">BOCA</h5>
@@ -94,9 +94,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100" id="cartao">
                         <a href="olhos.html">
-                            <img src="img/Cilios card.png" class="card-img-top" alt="Produto 3">
+                            <img src="img/cards/Cilios card.png" class="card-img-top" alt="Produto 3">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">OLHOS</h5>
