--- a/Inicio.html
+++ b/Inicio.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100" id="cartao">
-                        <a href="olhos.html">
+                        <a href="olhos.html" class="img-card">
                             <img src="img/cards/Cilios card.png" class="card-img-top" alt="Produto 3">
                         </a>
                         <div class="card-body">
