--- a/boca.html
+++ b/boca.html
@@ -46,6 +46,15 @@
                         <div class="card-body">
                             <h5 class="card-title">Baton</h5>
                             <p class="card-text">Cores intensas e duradouras para lábios irresistíveis. Escolha seu tom e destaque sua beleza!</p>
+                            <p class="card-text" id="corpocartao">
+                                De: <span class="preco-antigo">R$ 60,00</span> por:
+                            </p>
+                            <p class="card-text" id="corpocartao">
+                                <span class="preco-novo">R$ 40,00 à vista</span>
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Comprar
+                            </button>
                         </div>
                        
                     </div>
@@ -59,10 +68,10 @@
                             <h5 class="card-title">Gloss</h5>
                             <p class="card-text">Brilho radiante e hidratação para lábios sedosos e vibrantes. Perfeito para qualquer ocasião!</p>
                             <p class="card-text" id="corpocartao">
-                                De: <span class="preco-antigo">R$ 2.388,24</span> por:
+                                De: <span class="preco-antigo">R$ 80,00</span> por:
                             </p>
                             <p class="card-text" id="corpocartao">
-                                <span class="preco-novo">R$ 1.000,90 à vista</span>
+                                <span class="preco-novo">R$ 50,00 à vista</span>
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Comprar
@@ -79,6 +88,15 @@
                         <div class="card-body">
                             <h5 class="card-title">Lip Tint</h5>
                             <p class="card-text"> Cor natural e duradoura para lábios frescos o dia todo. Toque de cor sem esforço!</p>
+                            <p class="card-text" id="corpocartao">
+                                De: <span class="preco-antigo">R$ 55,00</span> por:
+                            </p>
+                            <p class="card-text" id="corpocartao">
+                                <span class="preco-novo">R$ 40,00 à vista</span>
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Comprar
+                            </button>
                         </div>
                       
                     </div>
