--- a/quemsomos.html
+++ b/quemsomos.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <div class="container-fluid">
-            <img src="img/MK.png" class="img-lat" alt="">
+            <img src="img/MK new.png" class="img-esq" alt="">
             <div class="card card-custom">
                 <p>
                     <h1 class="titulo text">Sobre Nós</h1>
@@ -54,6 +54,7 @@
                 <p class="texto text"><strong>Maristela & Maria Eduarda</strong></p>
                 <p class="texto text">Fundadoras e apaixonadas por maquiagem</p>
             </div>
+            <img src="img/MK Gloss.png" class="img-dir" alt="">
         </div>
     </main>
     <footer>
