--- a/carrinho.html
+++ b/carrinho.html
@@ -41,16 +41,10 @@
         <div class="container-fluid">
             <img src="img/MK new.png" class="img-esq" alt="">
             <div class="card card-custom">
-                <p>
-                    <h1 class="titulo text">Sobre Nós</h1>
-                </p>
-                <p class="texto text">Seja bem-vindo ao nosso universo de beleza! Somos Maristela e Maria Eduarda, duas amigas apaixonadas por maquiagem e por transformar o cotidiano das pessoas com um toque especial de cor e estilo.</p>
-                <p class="texto text">Nossa jornada começou de forma simples, com conversas animadas sobre os produtos que mais amávamos e como poderíamos levar essa paixão a mais pessoas. Com o tempo, decidimos transformar nosso sonho em realidade e criar uma marca que não só oferecesse produtos de alta qualidade, mas também proporcionasse uma experiência única e acolhedora para todos que nos acompanham.</p>
-                <p class="texto text">Nossa missão é oferecer maquiagem que realce a beleza única de cada pessoa, seja para o dia a dia ou para ocasiões especiais. Aqui, acreditamos que a maquiagem é uma forma de expressão, autoestima e autoconfiança, e estamos sempre em busca de produtos inovadores, duráveis e que atendam às necessidades de todos os tipos de pele e estilos.</p>
-                <p class="texto text">Com uma visão de inclusão e amor próprio, nossa marca nasceu da amizade, do respeito e do desejo de criar algo que pudesse fazer a diferença na vida das pessoas. Estamos sempre ao seu lado para garantir que cada aplicação de maquiagem seja uma experiência prazerosa e empoderadora!</p>
-                <p class="texto text">Fique à vontade para explorar nossos produtos e se apaixonar por cada detalhe que preparamos com tanto carinho. Vamos juntas celebrar a beleza em todas as suas formas! ✨</p>
-                <p class="texto text"><strong>Maristela & Maria Eduarda</strong></p>
-                <p class="texto text">Fundadoras e apaixonadas por maquiagem</p>
+                <h1>Carrinho de Compras</h1>
+                <div id="lista-carrinho"></div>
+                <p id="total"></p>
+                <button onclick="limparCarrinho()">Limpar Carrinho</button>
             </div>
             <img src="img/MK Gloss.png" class="img-dir" alt="">
         </div>
@@ -62,6 +56,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="carrinho.js"></script>
 </body>
 
 </html>
