--- a/Inicio.html
+++ b/Inicio.html
@@ -6,6 +6,7 @@
     <title>MARI-MADU</title>
     <link rel="shortcut icon" href="img/Logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
@@ -14,20 +15,20 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="Inicio.html">INÍCIO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill" id="icon-inicio"></i> INÍCIO</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag-fill" id="icon-prod"></i>
                                PRODUTOS
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" id="texto_nav" href="boca.html">Boca</a></li>
+                                <li><a class="dropdown-item" id="texto_nav" href="boca.html" >Boca</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="olhos.html">Olhos</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="pele.html">Pele</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo" alt="Logo"></a></li>
-                        <li class="nav-item"><a class="nav-link" href="quemsomos.html">QUEM SOMOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTATO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="quemsomos.html"><i class="bi bi-person-fill" id="icon-quem"></i>QUEM SOMOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-person-lines-fill" id="icon-contato"></i>CONTATO</a></li>
                     </ul>
                 </div>
             </div>
