--- a/carrinho.html
+++ b/carrinho.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="quemsomos.css">
+    <link rel="stylesheet" href="carrinho.css">
 </head>
 
 <body>
@@ -18,35 +18,48 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill" id="icon-inicio"></i> INÍCIO</a></li>
+                        <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo"
+                            alt="Logo"></a></li>
+                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill"
+                                    id="icon-inicio"></i> INÍCIO</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag-fill" id="icon-prod"></i>
-                               PRODUTOS
+                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag-fill"
+                                    id="icon-prod"></i>
+                                PRODUTOS
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" id="texto_nav" href="boca.html" >Boca</a></li>
+                                <li><a class="dropdown-item" id="texto_nav" href="boca.html">Boca</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="olhos.html">Olhos</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="pele.html">Pele</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo" alt="Logo"></a></li>
-                        <li class="nav-item"><a class="nav-link" href="quemsomos.html"><i class="bi bi-person-fill" id="icon-quem"></i>QUEM SOMOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-person-lines-fill" id="icon-contato"></i>CONTATO</a></li>
+                       
+                        <li class="nav-item"><a class="nav-link" href="quemsomos.html"><i class="bi bi-person-fill"
+                                    id="icon-quem"></i>QUEM SOMOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contato.html"><i class="bi bi-person-lines-fill"
+                                    id="icon-contato"></i>CONTATO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="carrinho.html"><i class="bi bi-bag-fill"
+                                    id="icon-inicio"></i>CARRINHO</a></li>
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <div class="container-fluid">
-            <img src="img/MK new.png" class="img-esq" alt="">
-            <div class="card card-custom">
+        <div class="container-fluid" id="container-fluid">
+            <div class="card-custom">
                 <h1>Carrinho de Compras</h1>
-                <div id="lista-carrinho"></div>
-                <p id="total"></p>
-                <button onclick="limparCarrinho()">Limpar Carrinho</button>
+                <div id="lista-carrinho">
+                    <!-- Os cards serão gerados pelo JavaScript aqui -->
+                </div>
+        
+                <button class="limpar-car btn" onclick="limparCarrinho()">Limpar Carrinho</button>
+                <div id="total" class="total-carrinho">
+                    Total do Carrinho: R$0,00
+                </div>
             </div>
-            <img src="img/MK Gloss.png" class="img-dir" alt="">
         </div>
     </main>
     <footer>
