--- a/quemsomos.html
+++ b/quemsomos.html
@@ -18,20 +18,30 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill" id="icon-inicio"></i> INÍCIO</a></li>
+                        <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo"
+                            alt="Logo"></a></li>
+                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill"
+                                    id="icon-inicio"></i> INÍCIO</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag-fill" id="icon-prod"></i>
-                               PRODUTOS
+                            <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-bag-fill"
+                                    id="icon-prod"></i>
+                                PRODUTOS
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" id="texto_nav" href="boca.html" >Boca</a></li>
+                                <li><a class="dropdown-item" id="texto_nav" href="boca.html">Boca</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="olhos.html">Olhos</a></li>
                                 <li><a class="dropdown-item" id="texto_nav" href="pele.html">Pele</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo" alt="Logo"></a></li>
-                        <li class="nav-item"><a class="nav-link" href="quemsomos.html"><i class="bi bi-person-fill" id="icon-quem"></i>QUEM SOMOS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-person-lines-fill" id="icon-contato"></i>CONTATO</a></li>
+                       
+                        <li class="nav-item"><a class="nav-link" href="quemsomos.html"><i class="bi bi-person-fill"
+                                    id="icon-quem"></i>QUEM SOMOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contato.html"><i class="bi bi-person-lines-fill"
+                                    id="icon-contato"></i>CONTATO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="carrinho.html"><i class="bi bi-bag-fill"
+                                    id="icon-inicio"></i>CARRINHO</a></li>
+
                     </ul>
                 </div>
             </div>
