--- a/boca.html
+++ b/boca.html
@@ -60,10 +60,10 @@
                             <h5 class="card-title">Baton</h5>
                             <p class="card-text">Cores intensas e duradouras para lábios irresistíveis. Escolha seu tom
                                 e destaque sua beleza!</p>
-                            <p class="card-text corpocartao">
+                                <p class="card-text" id="corpocartao">
                                 De: <span class="preco-antigo">R$ 60,00</span> por:
                             </p>
-                            <p class="card-text corpocartao">
+                            <p class="card-text" id="corpocartao">
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="compra.html?produto=Baton&preco=40,00&imagem=img/cards/Baton card.png"><button
@@ -130,7 +130,7 @@
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="compra.html?produto=Lip Tint Roxo&preco=40,00&imagem=img/cards/Lip tint card.png"><button
-                                    type="button" class="btn btn-primary" >
+                                    type="button" class="btn btn-success" >
                                     Comprar
                                 </button></a>
                                 <button type="button" class="btn btn-primary" onclick="adicionarAoCarrinho({
@@ -155,10 +155,10 @@
                             <h5 class="card-title">Baton</h5>
                             <p class="card-text">Cores intensas e duradouras para lábios irresistíveis. Escolha seu tom
                                 e destaque sua beleza!</p>
-                            <p class="card-text corpocartao">
+                                <p class="card-text" id="corpocartao">
                                 De: <span class="preco-antigo">R$ 60,00</span> por:
                             </p>
-                            <p class="card-text corpocartao">
+                            <p class="card-text" id="corpocartao">
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="#" id="comprar-link">
@@ -226,7 +226,7 @@
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="compra.html?produto=Lip Tint Roxo&preco=40,00&imagem=img/cards/Lip tint card.png"><button
-                                    type="button" class="btn btn-primary" >
+                                    type="button" class="btn btn-success" >
                                     Comprar
                                 </button></a>
                                 <button type="button" class="btn btn-primary" onclick="adicionarAoCarrinho({
@@ -252,10 +252,10 @@
                             <h5 class="card-title">Baton</h5>
                             <p class="card-text">Cores intensas e duradouras para lábios irresistíveis. Escolha seu tom
                                 e destaque sua beleza!</p>
-                            <p class="card-text corpocartao">
+                                <p class="card-text" id="corpocartao">
                                 De: <span class="preco-antigo">R$ 60,00</span> por:
                             </p>
-                            <p class="card-text corpocartao">
+                            <p class="card-text" id="corpocartao">
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="#" id="comprar-link">
@@ -323,7 +323,7 @@
                                 <span class="preco-novo">R$ 40,00 à vista</span>
                             </p>
                             <a href="compra.html?produto=Lip Tint Roxo&preco=40,00&imagem=img/cards/Lip tint card.png"><button
-                                    type="button" class="btn btn-primary" >
+                                    type="button" class="btn btn-success" >
                                     Comprar
                                 </button></a>
                                 <button type="button" class="btn btn-primary" onclick="adicionarAoCarrinho({
