--- a/pagamento.html
+++ b/pagamento.html
@@ -54,7 +54,7 @@
                 <p>
                     <h1 class="titulo text">Pagamento</h1>
                 </p>
-                <form action="#" method="POST">
+                <form id="form" action="#" method="POST">
                   <div class="form-group">
                       <label for="nome">Nome Completo</label>
                       <input type="text" id="nome" name="nome" required>
@@ -85,7 +85,7 @@
                       <input type="text" id="cvv" name="cvv" maxlength="3" placeholder="123" required>
                   </div>
       
-                  <button type="submit" class="btn">Finalizar Pagamento</button>
+                  <button type="button" class="btn">Finalizar Pagamento</button>
               </form>
         
               <div class="produto">
