--- a/pele.html
+++ b/pele.html
@@ -15,9 +15,9 @@
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-img" href="Inicio.html"><img src="img/Logo.png" id="Logo"
+                        <li class="nav-item"><a class="nav-img" href="index.html"><img src="img/Logo.png" id="Logo"
                             alt="Logo"></a></li>
-                        <li class="nav-item"><a class="nav-link" href="Inicio.html"><i class="bi bi-house-fill"
+                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-fill"
                                     id="icon-inicio"></i> INÍCIO</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="texto_nav" href="#" role="button"
